# yahoo_finance_api

./: .gitignore  Cargo.toml  LICENSE-Apache2.0  LICENSE-MIT  README.md  ReleaseNotes.md
.github/workflows/: rust.yml
examples/: dividends.rs  get_fxrates.rs  get_quote.rs  get_quote_history.rs  get_quote_period_interval.rs  quote_summary.rs  search_options.rs  search_ticker.rs  splits.rs
src/: async_impl.rs  blocking_impl.rs  lib.rs  quote_summary.rs  quotes.rs  search_result.rs  yahoo_error.rs
