[package]
name = "yahoo_finance_api"
version = "4.0.0-rc"
authors = [
    "Mark Beinker <mwb@quantlink.de>",
    "Claus Matzinger <claus.matzinger+kb@gmail.com>",
]
edition = "2021"
rust-version = "1.70"
description = "A rust adapter for the yahoo! finance API to fetch histories of market data quotes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/yahoo_finance_api"
readme = "README.md"
keywords = ["finance", "yahoo", "stock", "quote"]
categories = ["api-bindings"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

rust_decimal = { version = "1.36", optional = true }
serde_json = "1.0"
serde_json_path_to_error = { version = "0.1.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }

[features]
blocking = ["reqwest/blocking"]
decimal = ["dep:rust_decimal"]
debug = ["serde_json_path_to_error"]
